# SpecWiz-cli

./: .gitignore  DEVELOPMENT.md  Makefile  QUICKSTART.md  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
specwiz/: __init__.py  exceptions.py
specwiz/adapters/: __init__.py  events.py  llm.py  llm_gemini.py  llm_ollama.py  storage.py
specwiz/cli/: __init__.py  _engine.py  main.py
specwiz/cli/commands/: __init__.py  generate.py  rulebook.py
specwiz/core/: __init__.py  engine.py
specwiz/core/interfaces/: __init__.py  adapters.py  engine.py
specwiz/core/managers/: __init__.py  config.py  context.py  rulebook.py
specwiz/core/prompts/: __init__.py  models.py  registry.py  renderer.py
specwiz/prompts/: README.md
specwiz/prompts/architecture_rulebook_generator/: metadata.yaml  template.md
specwiz/prompts/engineering_rulebook_generator/: metadata.yaml  template.md
specwiz/prompts/knowledge_base_generator/: metadata.yaml  template.md
specwiz/prompts/prd_generator/: metadata.yaml  template.md
specwiz/prompts/product_context_generator/: metadata.yaml  template.md
specwiz/prompts/qa_rulebook_generator/: metadata.yaml  template.md
specwiz/prompts/release_notes_generator/: metadata.yaml  template.md
specwiz/prompts/user_guide_generator/: metadata.yaml  template.md
specwiz/prompts/writing_rulebook_generator/: metadata.yaml  template.md
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_full_pipeline.py
tests/unit/: __init__.py  test_storage_adapter.py
tests/unit/adapters/: __init__.py  test_gemini_adapter.py  test_llm_adapter.py  test_ollama_adapter.py
tests/unit/cli/: __init__.py  test_cli_commands.py
tests/unit/managers/: __init__.py  test_config_manager.py  test_context_manager.py  test_rulebook_manager.py
